--- a/week9/assets/styles/style.css
+++ b/week9/assets/styles/style.css
@@ -1,11 +1,11 @@
-.container {
+.lorum {
     display: grid;
     grid-template-columns: 1fr 2fr;
     grid-template-rows: 1fr;
     border: 1px solid red;
 }
 
-.container2 {
+.about {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
     grid-template-rows: 1fr 1fr;
@@ -14,14 +14,14 @@
     border: 1px solid blue;
 }
 
-.container3 {
+.mission1 {
     display: grid;
     grid-template-columns: 1 fr 1fr;
     grid-template-rows: 1 fr 1fr;
     gap: 10px;
 }
 
-.mission {
+.mission1__title {
     display: grid;
     grid-column: 1/3;
     grid-row: 1/2;
@@ -81,7 +81,7 @@ aside {
     justify-items: center;
 }
 
-main {
+image {
     display: grid;
     grid-column: 2/3;
     grid-row: 1/2;
