--- a/week9/assets/styles/style.css
+++ b/week9/assets/styles/style.css
@@ -7,7 +7,7 @@
 
 .about {
     display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-columns: 1fr 1fr 2fr;
     grid-template-rows: 1fr 1fr;
     background-color: #BDBDBD22;
     gap: 20px;
@@ -73,7 +73,7 @@
 }
 
 
-aside {
+.name_project {
     display: grid;
     grid-column: 1/2;
     grid-row: 1/2;
