--- a/week9/style.css
+++ b/week9/style.css
@@ -1,12 +1,87 @@
+/* .container {
+    margin-left: 135px;
+    margin-right: 135px;
+} */
+
+.mission {
+    display: grid;
+    grid-template-areas: "mission__title"
+        "mission__statement";
+    grid-template-columns: 1fr;
+    grid-template-rows: 1fr 5fr;
+    margin-top: 10vh;
+}
+
+.mission__title {
+    grid-area: mission__title;
+}
+
+.mission__statement {
+    grid-area: mission__statement;
+}
+
+.project {
+    display: grid;
+    grid-template-areas: "project__title"
+        "project__image1"
+        "project__image2";
+    grid-template-columns: 1fr;
+    grid-template-rows: 1fr 3fr 3fr;
+    gap: 2vw;
+}
+
+.project__image1 {
+    display: grid;
+    grid-template-areas: "image__item1 image__item2";
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: 1fr;
+    gap: 2vw;
+    grid-area: project__image1;
+}
+
+.project__image2 {
+    display: grid;
+    grid-template-areas: "image__item3 image__item4 image__item5";
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-rows: 1fr;
+    gap: 2vw;
+    grid-area: project__image2;
+}
+
+.project__title {
+    grid-area: project__title;
+}
+
+.image__item1 {
+    grid-area: image__item1;
+}
+
+.image__item2 {
+    grid-area: image__item2;
+}
+
+.image__item3 {
+    grid-area: image__item3;
+}
+
+.image__item4 {
+    grid-area: image__item4;
+}
+
+.image__item5 {
+    grid-area: image__item5;
+}
+
+
 .contact {
     display: grid;
     grid-template-areas: "contact_title contact_title"
         "input_form picture";
     grid-template-columns: 1fr 2fr;
-    grid-template-rows: 1fr 5fr;
+    grid-template-rows: 1fr 6fr;
     gap: 2vw;
-    margin-top: 2vh;
-    /* align-items: center; */
+    margin-top: 10vh;
+    margin-bottom: 10vh;
 }
 
 .contact_title {
@@ -19,4 +94,9 @@ form {
 
 .picture {
     grid-area: picture;
+}
+
+.backcolor {
+    background: #F3F3F3;
+    color: #8D8D8D;
 }
