--- a/week9/style.css
+++ b/week9/style.css
@@ -66,7 +66,6 @@
     background-color: rgb(51, 51, 51, .8);
     padding-top: 8vh;
     padding-left: 5vw;
-    color: white;
     width: 100%;
     height: 100%;
     /* text-align: center; */
@@ -119,4 +118,41 @@ form {
 .backcolor {
     background: #F3F3F3;
     color: #8D8D8D;
+}
+
+/* текст */
+h1,
+.textstyle {
+    font-family: Roboto;
+    font-style: normal;
+    font-weight: 300;
+    font-size: 64px;
+    line-height: 64px;
+    color: #BDBDBD;
+}
+
+.textstyle {
+    font-weight: normal;
+    font-size: 22px;
+    line-height: 36px;
+    color: #333333;
+}
+
+.image1__text h1 {
+    font-weight: bold;
+    color: white;
+}
+
+.image1__text p {
+    font-family: Gothic A1;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 12px;
+    line-height: 12px;
+
+    letter-spacing: 0.2em;
+    text-transform: uppercase;
+
+    color: #FFFFFF;
+
 }
