--- a/week9/assets/styles/style.css
+++ b/week9/assets/styles/style.css
@@ -90,16 +90,20 @@
 
 }
 
-h1 {
-    color: #BDBDBD;
-    align-self: center;
-}
-
+h1,
 h2 {
-    align-self: center;
+    font-family: Roboto;
+    font-style: normal;
+    font-weight: 300;
+    font-size: 64px;
+    line-height: 64px;
     color: #BDBDBD;
 }
 
-p {
-    align-self: center;
+.about__text {
+    font-family: Roboto;
+    font-style: normal;
+    font-weight: 300;
+    font-size: 16px;
+    line-height: 25px;
 }
