--- a/week9/assets/styles/style.css
+++ b/week9/assets/styles/style.css
@@ -15,35 +15,6 @@
 
 }
 
-.mission1 {
-    display: grid;
-    grid-template-columns: 1 fr 1fr;
-    grid-template-rows: 1fr 1fr;
-    gap: 10px;
-}
-
-.mission1__title {
-    display: grid;
-    grid-column: 1/3;
-    grid-row: 1/2;
-}
-
-.text1 {
-    display: grid;
-    grid-column: 1/2;
-    grid-row: 2/3;
-    margin-right: 50px;
-
-
-}
-
-.text2 {
-    display: grid;
-    grid-column: 2/3;
-    grid-row: 2/3;
-    margin-left: 50px;
-}
-
 .about__pic1 {
     display: grid;
     grid-column: 1/2;
@@ -60,7 +31,7 @@
 
 }
 
-.pic3 {
+.about__pic3 {
     display: grid;
     grid-column: 1/2;
     grid-row: 2/3;
@@ -82,13 +53,15 @@
     justify-items: center;
 }
 
-.pic {
+.lorum__pic {
     display: grid;
     grid-column: 2/3;
     grid-row: 1/2;
     justify-items: end;
 
 }
+
+/*Текст*/
 
 h1,
 h2 {
@@ -106,4 +79,13 @@ h2 {
     font-weight: 300;
     font-size: 16px;
     line-height: 25px;
+}
+
+.lorum__text {
+    font-family: Roboto;
+    font-style: normal;
+    font-weight: bold;
+    font-size: 64px;
+    line-height: 64px;
+    color: #333333
 }
